--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "gravatar": "^1.8.1",
     "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.25",
     "morgan": "^1.10.0",
-    "normalize": "^0.3.1"
+    "normalize": "^0.3.1",
+    "react-moment": "^0.9.7"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
